force-app/main/default/objects/Commercial_L_I_Information__c/fields/Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Account_Classification__c</fullName>
    <description>Describes which account the quote should be written under.</description>
    <label>Account Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>SMATV</fullName>
            </value>
            <value>
                <fullName>MDU</fullName>
            </value>
            <value>
                <fullName>ACC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>