force-app/main/default/objects/Commercial_L_I_Information__c/fields/Additional_instructions_or_details__c.field-meta.xml
<CustomField>
    <fullName>Additional_instructions_or_details__c</fullName>
    <label>Additional instructions or details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>