force-app/main/default/objects/Commercial_L_I_Information__c/fields/Date_Written__c.field-meta.xml
<CustomField>
    <fullName>Date_Written__c</fullName>
    <label>Date Written</label>
    <type>Date</type>
</CustomField>