force-app/main/default/objects/Commercial_L_I_Information__c/fields/Estimated_Sales_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Sales_Dollars__c</fullName>
    <description>In this area Sales will input the estimated commissionable accessory dollars for this build</description>
    <label>Estimated Sales Dollars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>