force-app/main/default/objects/Commercial_L_I_Information__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>This field will be updated through the Sales Stage upsert process with the date of the upsert.</description>
    <label>Last Updated</label>
    <type>Date</type>
</CustomField>