force-app/main/default/objects/Commercial_L_I_Information__c/fields/Order_Components_Completed__c.field-meta.xml
<CustomField>
    <fullName>Order_Components_Completed__c</fullName>
    <description>What components have been completed?</description>
    <inlineHelpText>What components have been completed?</inlineHelpText>
    <label>Order Components Completed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Order_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Verified Ship To</fullName>
            </value>
            <value>
                <fullName>Payment Information</fullName>
            </value>
            <value>
                <fullName>Final BOM</fullName>
            </value>
            <value>
                <fullName>Parts to Arrive from Vendor</fullName>
            </value>
            <value>
                <fullName>Parts to be Transferred P10</fullName>
                <label>Parts to be Transferred PV</label>
            </value>
            <value>
                <fullName>Parts to be Released</fullName>
            </value>
            <value>
                <fullName>Alorica to Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>