force-app/main/default/objects/Commercial_L_I_Information__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Order Complete</fullName>
            </value>
            <value>
                <fullName>Order to be Written</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>