force-app/main/default/objects/Commercial_L_I_Information__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Identifies the method of payment</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>