force-app/main/default/objects/Commercial_L_I_Information__c/fields/Pro_Idiom_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Pro_Idiom_Agreement__c</fullName>
    <label>Pro:Idiom Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Quote_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>