force-app/main/default/objects/Commercial_L_I_Information__c/fields/Quarter_Year_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Year_Quoted__c</fullName>
    <label>Quarter/Year Quoted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q1 2025</fullName>
            </value>
            <value>
                <fullName>Q2 2025</fullName>
            </value>
            <value>
                <fullName>Q3 2025</fullName>
            </value>
            <value>
                <fullName>Q4 2025</fullName>
            </value>
            <value>
                <fullName>Q1 2024</fullName>
            </value>
            <value>
                <fullName>Q2 2024</fullName>
            </value>
            <value>
                <fullName>Q3 2024</fullName>
            </value>
            <value>
                <fullName>Q4 2024</fullName>
            </value>
            <value>
                <fullName>Q1 2023</fullName>
            </value>
            <value>
                <fullName>Q2 2023</fullName>
            </value>
            <value>
                <fullName>Q3 2023</fullName>
            </value>
            <value>
                <fullName>Q4 2023</fullName>
            </value>
            <value>
                <fullName>Q1 2022</fullName>
            </value>
            <value>
                <fullName>Q2 2022</fullName>
            </value>
            <value>
                <fullName>Q3 2022</fullName>
            </value>
            <value>
                <fullName>Q4 2022</fullName>
            </value>
            <value>
                <fullName>Q1 2021</fullName>
            </value>
            <value>
                <fullName>Q2 2021</fullName>
            </value>
            <value>
                <fullName>Q3 2021</fullName>
            </value>
            <value>
                <fullName>Q4 2021</fullName>
            </value>
            <value>
                <fullName>Q1 2020</fullName>
            </value>
            <value>
                <fullName>Q2 2020</fullName>
            </value>
            <value>
                <fullName>Q3 2020</fullName>
            </value>
            <value>
                <fullName>Q4 2020</fullName>
            </value>
            <value>
                <fullName>Q1 2019</fullName>
            </value>
            <value>
                <fullName>Q2 2019</fullName>
            </value>
            <value>
                <fullName>Q3 2019</fullName>
            </value>
            <value>
                <fullName>Q4 2019</fullName>
            </value>
            <value>
                <fullName>Q1 2018</fullName>
            </value>
            <value>
                <fullName>Q2 2018</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>