force-app/main/default/objects/Commercial_L_I_Information__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analog Headend</fullName>
                <color>#0B6FCE</color>
                <label>Analog Headend</label>
            </value>
            <value>
                <fullName>COM3000</fullName>
            </value>
            <value>
                <fullName>COM2000</fullName>
                <color>#E27001</color>
                <label>COM2000</label>
            </value>
            <value>
                <fullName>COM2000-SD</fullName>
                <color>#A845DC</color>
                <label>COM2000-SD</label>
            </value>
            <value>
                <fullName>DRE</fullName>
                <color>#F3D904</color>
                <label>DRE</label>
            </value>
            <value>
                <fullName>Flex</fullName>
                <color>#A53711</color>
                <label>Flex</label>
            </value>
            <value>
                <fullName>MDU</fullName>
                <color>#66E9BD</color>
                <label>MDU</label>
            </value>
            <value>
                <fullName>Parts Quote</fullName>
                <color>#0B24BE</color>
                <label>Parts Quote</label>
            </value>
            <value>
                <fullName>ZeeVee</fullName>
                <color>#419249</color>
                <label>ZeeVee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>