force-app/main/default/objects/Commercial_L_I_Information__c/fields/Quoted_Date__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Date__c</fullName>
    <label>Quoted Date</label>
    <type>Date</type>
</CustomField>