force-app/main/default/objects/Commercial_L_I_Information__c/fields/Requested_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Ship_Date__c</fullName>
    <inlineHelpText>put the date the dealer tells you they believe they will need this head end shipped from P10</inlineHelpText>
    <label>Requested Ship Date</label>
    <type>Date</type>
</CustomField>