force-app/main/default/objects/Commercial_L_I_Information__c/fields/Sales_Next_Step_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Next_Step_Due_Date__c</fullName>
    <description>In this area sales will input the date they are to complete the next step they have notated.</description>
    <label>Sales:  Next Step Due Date</label>
    <type>Date</type>
</CustomField>