force-app/main/default/objects/Commercial_L_I_Information__c/fields/Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Stage__c</fullName>
    <label>Sales Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System Design - P10</fullName>
                <default>true</default>
                <label>System Design - PV</label>
            </value>
            <value>
                <fullName>Design Review - DIRECTV</fullName>
            </value>
            <value>
                <fullName>Agreement Negotiation - Dealer</fullName>
            </value>
            <value>
                <fullName>Agreement Review - DIRECTV</fullName>
            </value>
            <value>
                <fullName>Account Creation - DIRECTV</fullName>
            </value>
            <value>
                <fullName>Equipment Ship Request - P10</fullName>
                <label>Equipment Ship Request - PV</label>
            </value>
            <value>
                <fullName>Shipped / Build Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>