force-app/main/default/objects/Commercial_L_I_Information__c/fields/SD_Digital_Flex_or_Analog__c.field-meta.xml
<CustomField>
    <fullName>SD_Digital_Flex_or_Analog__c</fullName>
    <label>If SD -  Digital Flex or Analog?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital Flex</fullName>
            </value>
            <value>
                <fullName>Analog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>