force-app/main/default/objects/Commercial_L_I_Information__c/fields/Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date__c</fullName>
    <description>Date that the order was shipped, not the date the order is expected to ship.</description>
    <inlineHelpText>Date that the order was shipped, not the date the order is expected to ship.</inlineHelpText>
    <label>Order Ship Date</label>
    <type>Date</type>
</CustomField>