force-app/main/default/objects/Commercial_L_I_Information__c/fields/Special_Shipment_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Shipment_Requirements__c</fullName>
    <description>Additional shipping requirements. Multiple selections allowed.</description>
    <inlineHelpText>Additional shipping requirements. Multiple selections allowed.</inlineHelpText>
    <label>Special Shipment Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Liftgate (+$27)</fullName>
            </value>
            <value>
                <fullName>Inside delivery (+$40)</fullName>
            </value>
            <value>
                <fullName>Appointment required (+$0)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>