force-app/main/default/objects/Commercial_L_I_Information__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote Requested</fullName>
                <default>true</default>
                <label>Quote Requested</label>
            </value>
            <value>
                <fullName>Quote Sent</fullName>
            </value>
            <value>
                <fullName>Quote Approved</fullName>
            </value>
            <value>
                <fullName>Quote Denied</fullName>
            </value>
            <value>
                <fullName>Pending Build</fullName>
            </value>
            <value>
                <fullName>Order Shipped</fullName>
            </value>
            <value>
                <fullName>Parts Only Shipped</fullName>
            </value>
            <value>
                <fullName>Quote Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>